@@ -199,3 +199,7 @@
 	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
 	* Added 'WHHttpServer::requestReceived()' virtual method to
 	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
+2016-02-23 Fred Gleason <fredg@paravelsystems.com>
+	* Removed the 'maxsize' parameter from the constructor of the
+	'WHCgiApplication' class in 'src/wh/whcgiapplication.cpp' and
+	'src/wh/whcgiapplication.h'.
